--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vaquejada-app</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Vaquejada APP - Gestão de Eventos de Vaquejada</title>
+    <meta name="description" content="Plataforma completa para gestão e inscrições em eventos de vaquejada" />
+    <meta name="author" content="AMJ Group Softwares LTDA" />
 
-    <meta property="og:title" content="vaquejada-app" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Vaquejada APP" />
+    <meta property="og:description" content="Plataforma completa para gestão e inscrições em eventos de vaquejada" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Vaquejada APP" />
+    <meta name="twitter:description" content="Plataforma completa para gestão e inscrições em eventos de vaquejada" />
+    <meta name="twitter:image" content="/src/assets/logo.png" />
   </head>
 
   <body>
